fixes wrong url and alignment problem in infographics

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -397,8 +397,8 @@ h3 {
   width: 300px;
   height: 300px;
   padding: 0;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 1px;
+  margin-right: 1px;
   text-align: center;
   display: inline-block;
 }
@@ -427,6 +427,8 @@ h3 {
 }
 
 .container1 {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
   height: 100%;
   width: 100%;
   border: 10px solid #f0f0f0;
